# TaskBasedVOW4SIKE

./: CMakeLists.txt  LICENSE.md  README.md  script.sh
include/: benchmark_concurrent_ds.h
libs/P128/: CMakeLists.txt
libs/P128/include/: P128_internal.h  config.h
libs/P128/src/: P128.c  ec_isogeny.c  fpx.c
libs/P128/src/AMD64/: fp_x64.c
libs/aes/: CMakeLists.txt  aes_ni.c
libs/aes/include/: aes.h
libs/sha3/: CMakeLists.txt
libs/vow_sike/: CMakeLists.txt
libs/vow_sike/include/: benchmarking.h  curve_math.h  prng.h  sidh_vow_base.h  sike_vow.h  sike_vow_instances.h  state.h  sync_strategies.h  test_extras.h
libs/vow_sike/include/types/: bintree.h  instance.h  state.h  triples.h
libs/vow_sike/src/: benchmarking.c  bintree.c  memory.c  sidh_vow_base.c  sike_vow.c  sike_vow_instances.c  state.c  swig_helpers.c  sync_strategies.c  vow.c
src/: benchmark_concurrent_ds.cpp  test_vOW_SIKE.cpp
